force-app/main/default/objects/Account_Role__c/fields/Construction_Job__c.field-meta.xml
<CustomField>
    <fullName>Construction_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Job</label>
    <referenceTo>Construction_Job__c</referenceTo>
    <relationshipLabel>Account Roles</relationshipLabel>
    <relationshipName>Account_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>