force-app/main/default/objects/Account_Role__c/fields/Role_Discipline__c.field-meta.xml
<CustomField>
    <fullName>Role_Discipline__c</fullName>
    <label>Role/Discipline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>